noinst_LIBRARIES = libsg.a
libkmm_a_SOURCES =  \
					src/base64.c \
					src/http_get.c \
					src/ipaddr.c \
					src/ivisa_plfm.c \
					src/ivisa_sg_filerev.c \
					src/ksupport.c \
					src/sg_acc.c \
					src/sg_acc_x2s.c \
					src/sg_bs.c \
					src/sg_com2.c \
					src/sg_com3.c \
					src/sg_ctt.c \
					src/sg_ctt_x2s.c \
					src/sg_fdt.c \
					src/sg_fdt_x2s.c \
					src/sg_iad.c \
					src/sg_iad_x2s.c \
					src/sg_imd.c \
					src/sg_mgr2.c \
					src/sg_pcc.c \
					src/sg_pcc_x2s.c \
					src/sg_pcd.c \
					src/sg_pcd_x2s.c \
					src/sg_pci.c \
					src/sg_pci_x2s.c \
					src/sg_pvd.c \
					src/sg_pvd_x2s.c \
					src/sg_root.c \
					src/sg_sch.c \
					src/sg_sch_x2s.c \
					src/sg_sdd.c \
					src/sg_sdd_x2s.c \
					src/sg_sdp.c \
					src/sg_sdp_x2s.c \
					src/sg_sdu.c \
					src/sg_ser.c \
					src/sg_ser_x2s.c \
					src/sg_ses.c \
					src/sg_zbd.c \
					src/sg_zbd_x2s.c \
					src/ulapi.c \

libkmm_a_LDFLAGS = -lrt 
libkmm_a_CFLAGS = -Wall
